add util support metric collector